--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <style>    
 /* color theme ----> https://color.adobe.com/Tema-de-color-7-color-theme-8631919/?showPublished=true */
-/* #339966, #39ac73, #ffffe6, #ffff1a, and #999966 */
+/* #f602ff, #872bff, #ffffe6, #ffff1a, and #009dffs */
 /* navagation_bar */
         * {margin:0; padding:0;
         }
@@ -28,13 +28,16 @@
             padding: 0;
         }
         nav {margin-top: 15px}
-        #nav_bar {background-color: #999966; 
+        #nav_bar {background-color: #009dffs; 
         }
 /* navagation_bar */
         li {font-family: sans-serif}
         p {background-color: #999966}
         #paragraph_1 {
-            border-top: 4px solid gray;
+            border-top: 1px solid gray;
+        }
+        h2 {
+          padding-top: 10px
         }
     </style>
 <body>
