--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             padding: 0;
         }
         nav {margin-top: 15px}
-        #nav_bar {background-color: #009dffs; 
+        #nav_bar {background-color: #009dff; 
         }
 /* navagation_bar */
         li {font-family: sans-serif}
