--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <style>    
 /* color theme ----> https://color.adobe.com/Tema-de-color-7-color-theme-8631919/?showPublished=true */
-/* #f602ff, #872bff, #ffffe6, #ffff1a, and #009dffs */
+/* #f602ff, #872bff, #ffffe6, #ffff1a, and #0284ff */
 /* navagation_bar */
         * {margin:0; padding:0;
         }
@@ -28,7 +28,7 @@
             padding: 0;
         }
         nav {margin-top: 15px}
-        #nav_bar {background-color: #009dff; 
+        #nav_bar {background-color: #0284ff; 
         }
 /* navagation_bar */
         li {font-family: sans-serif}
