--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <html>
     <meta charset="utf-8">
     <style>    
-/* color theme ----> https://color.adobe.com/Tema-de-color-7-color-theme-8631919/?showPublished=true */
-/* #f602ff, #872bff, #ffffe6, #ffff1a, and #0284ff */
+/* #f602ff, #872bff, #ffffe6, #00daf7, #e04e61, and #0284ff*/
 /* navagation_bar */
         * {margin:0; padding:0;
         }
         li {font-size: 20px
         }
         nav li {
-            float: right;
+            float: right; background-color: #ffffe6; 
         }
-        nav ul {list-style: none;
+        nav ul {list-style: none; 
         }
         nav a {
             text-decoration: none;
-            color: black;
+            color: #0284ff;
             display: block; text-align: center; padding: 10px 42.7px;
         }
-            nav li a:hover{background-color: #999966;
+            nav li a:hover{
+                background-color: #e04e61;
             }
         #header {
             float: left;
@@ -28,16 +28,19 @@
             padding: 0;
         }
         nav {margin-top: 15px}
-        #nav_bar {background-color: #0284ff; 
+        #nav_bar {background-color: #ffffe6; 
         }
 /* navagation_bar */
         li {font-family: sans-serif}
         p {background-color: #999966}
         #paragraph_1 {
-            border-top: 1px solid gray;
+            border-top: 1px solid black;
         }
         h2 {
-          padding-top: 10px
+          padding-top: 10px; padding-left: 100px;
+        }
+        body {
+            background-color: #ffffe6;
         }
     </style>
 <body>
@@ -58,7 +61,7 @@
 <!--- navagation_bar --->
     <img src="http://takhinihotpools.com/static/img/front-banner.jpg" width="1348">
     <div id="paragraph_1"> 
-        <h2>News</h2>
+        <p style="font-size:50px">News<p>
     <p> Come check out the new business on the property, Yukon Escape Games. If you are looking for a fun activity on the property then come check them out!
     </p> </div>
 </body>
