--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         body {
             background-color: #ffffe6;
         }
+        #come_for_a_soak {
+            padding-top: 20px;
+        }
+        #campground_and_hostel {
+            padding-top: 20px;
+        }
     </style>
 <body>
 <!--- navagation_bar --->
@@ -62,7 +68,13 @@
     <img src="http://takhinihotpools.com/static/img/front-banner.jpg" width="1348">
     <div id="paragraph_1"> 
         <p style="font-size:50px">News<p>
-    <p> Come check out the new business on the property, Yukon Escape Games. If you are looking for a fun activity on the property then come check them out!
+    <p style="font-size:30px"> Come check out the new business on the property, Yukon Escape Games. If you are looking for a fun activity on the property then come check them out!
     </p> </div>
+    <div id="come_for_a_soak"><p style="font-size:50px">Come for a soak!</p></div>
+    <p style="font-size:30px"> Takhini Hot Pools is one of the most visited locations in the Yukon. The hot springs have been in operation for over 100 years. Our hot springs pools are a relaxing 36° and 42° Celsius, with water entering the pool at 47 degrees. The water is natural and rich in minerals . We are open year around. Please see the menu above for our summer and winter hours. See our "Hours and Rates" section for nightly deals and specials.</p>
+    <div id="campground_and_hostel"><p style="font-size:50px">Campground and Hostel</p></div>
+    <p style="font-size:30px">The hostel is located only a 30 second walk away from the hot springs. It is brand new and has only been in operation for 1 year. Our forested campground, behind the hostel, provides excellent northern lights viewing. The edge-of-the-wilderness location provides access to trails for walking, biking, snow-shoeing and cross-country skiing. All guests from the hostel and campground receive a 20% discount at the hot springs.</p>
 </body>
 </html>
+
+
