--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 /* navagation_bar */
         * {margin:0; padding:0;
         }
-        li {font-size: 20px
+        li {font-size: 23px
         }
         nav li {
-            float: right; background-color: #ffffe6; 
+            float: right; background-color: white; font-size: 30;
         }
         nav ul {list-style: none; 
         }
         nav a {
             text-decoration: none;
             color: #0284ff;
-            display: block; text-align: center; padding: 10px 42.7px;
-        }
+          display: block; text-align: center; padding: 10px 42.7px;
+      }
             nav li a:hover{
                 background-color: #e04e61;
             }
@@ -28,11 +28,11 @@
             padding: 0;
         }
         nav {margin-top: 15px}
-        #nav_bar {background-color: #ffffe6; 
+        #nav_bar {background-color: #ffffe6;
         }
 /* navagation_bar */
         li {font-family: sans-serif}
-        p {background-color: #999966}
+        p {background-color: #0284ff}
         #paragraph_1 {
             border-top: 1px solid black;
         }
@@ -40,7 +40,7 @@
           padding-top: 10px; padding-left: 100px;
         }
         body {
-            background-color: #ffffe6;
+            background-color: white;
         }
         #come_for_a_soak {
             padding-top: 20px;
@@ -65,16 +65,19 @@
             </ul>
         </nav></div>
 <!--- navagation_bar --->
-    <img src="http://takhinihotpools.com/static/img/front-banner.jpg" width="1348">
+    <img src="http://takhinihotpools.com/static/img/winter-banner.jpg" width="1348">
     <div id="paragraph_1"> 
         <p style="font-size:50px">News<p>
-    <p style="font-size:30px"> Come check out the new business on the property, Yukon Escape Games. If you are looking for a fun activity on the property then come check them out!
+    <p style="font-size:30px"> Come check out the new business on the property, 
+    Yukon Escape Games. If you are looking for a fun activity on the property 
+    then come check them out!
     </p> </div>
     <div id="come_for_a_soak"><p style="font-size:50px">Come for a soak!</p></div>
-    <p style="font-size:30px"> Takhini Hot Pools is one of the most visited locations in the Yukon. The hot springs have been in operation for over 100 years. Our hot springs pools are a relaxing 36° and 42° Celsius, with water entering the pool at 47 degrees. The water is natural and rich in minerals . We are open year around. Please see the menu above for our summer and winter hours. See our "Hours and Rates" section for nightly deals and specials.</p>
+    <p style="font-size:30px"> Takhini Hot Pools is one of the most visited locations in the Yukon. <br>
+    The hot springs have been in operation for over 100 years. Our hot springs 
+    pools are a relaxing 36° and 42° Celsius, with water entering the pool at 47 
+    degrees. The water is natural and rich in minerals . We are open year around. Please see the menu above for our summer and winter hours. See our "Hours and Rates" section for nightly deals and specials.</p>
     <div id="campground_and_hostel"><p style="font-size:50px">Campground and Hostel</p></div>
     <p style="font-size:30px">The hostel is located only a 30 second walk away from the hot springs. It is brand new and has only been in operation for 1 year. Our forested campground, behind the hostel, provides excellent northern lights viewing. The edge-of-the-wilderness location provides access to trails for walking, biking, snow-shoeing and cross-country skiing. All guests from the hostel and campground receive a 20% discount at the hot springs.</p>
 </body>
 </html>
-
-
