--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
     <meta charset="utf-8">
     <style>    
-/* #f602ff, #872bff, #ffffe6, #00daf7, #e04e61, and #0284ff*/
+/*#ffffe6, #00daf7, #0284ff*/
+/*style="float:left; margin-right: 7px; margin-bottom: 5px; border: solid black 3px;"*/
 /* navagation_bar */
         * {margin:0; padding:0;
         }
@@ -20,7 +21,7 @@
           display: block; text-align: center; padding: 10px 42.7px;
       }
             nav li a:hover{
-                background-color: #e04e61;
+                background-color: lightgray;
             }
         #header {
             float: left;
@@ -31,10 +32,9 @@
         #nav_bar {background-color: #ffffe6;
         }
 /* navagation_bar */
-        li {font-family: sans-serif}
-        p {background-color: #0284ff}
-        #paragraph_1 {
-            border-top: 1px solid black;
+        li {font-family: sans-serif; background-color: white}
+        #section_1 {
+            border-top: 1px solid black; background-color: white
         }
         h2 {
           padding-top: 10px; padding-left: 100px;
@@ -43,18 +43,41 @@
             background-color: white;
         }
         #come_for_a_soak {
-            padding-top: 20px;
+            padding-top: 20px; background-color: #0284ff; float: right; margin-top: 5px
         }
         #campground_and_hostel {
-            padding-top: 20px;
+            padding-top: 20px; float: left; margin-right: 5px; background-color: #0284ff
+        }
+        #news {
+            padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff
+        }
+        #ch_image {
+            float: left; margin-left: 50px;
+        }
+        #cfas_image {
+            float: right; margin-right: 50px;
+        }
+        .header {
+            font-size: 40px; 
+        }
+        .paragraph {
+            font-size: 20px;
+        } 
+        #cht_and_p {
+            background-color: #00daf7; border: solid white 10px;
+        }
+        #cfas_paragraph {
+            background-color: #00daf7; border: solid white 10px; 
+        }
+        #ns_p {
+            background-color: #00daf7; border: solid white 10px;
         }
     </style>
 <body>
 <!--- navagation_bar --->
         <div id="nav_bar">
         <div id="header">
-        <img src="http://takhinihotpools.com/static/img/Takhini-Hot-Pools-Logo-15.png">
-        </div>
+            <img src="http://takhinihotpools.com/static/img/Takhini-Hot-Pools-Logo-15.png"></div>
         <nav>
             <ul>
                 <li class="nav_tab"> <a href="Contact.html">Contact</li></a>
@@ -65,19 +88,30 @@
             </ul>
         </nav></div>
 <!--- navagation_bar --->
-    <img src="http://takhinihotpools.com/static/img/winter-banner.jpg" width="1348">
-    <div id="paragraph_1"> 
-        <p style="font-size:50px">News<p>
-    <p style="font-size:30px"> Come check out the new business on the property, 
+        <img src="http://takhinihotpools.com/static/img/winter-banner.jpg" width="1348">
+    <div id="section_1">
+    <div id="news">
+            <p class="header">News<p></div>
+    <div id="ns_p">
+            <p class="paragraph"> Come check out the new business on the property, 
     Yukon Escape Games. If you are looking for a fun activity on the property 
-    then come check them out!
-    </p> </div>
-    <div id="come_for_a_soak"><p style="font-size:50px">Come for a soak!</p></div>
-    <p style="font-size:30px"> Takhini Hot Pools is one of the most visited locations in the Yukon. <br>
+    then come check them out!</div>
+    </p> 
+    <div id="cfas_image">
+        <img src="http://en.destinationcanada.com/sites/default/files/imagecache/fullstory_image_465w/image/story_ideas/10_spas_takhini.jpg" width="450px" style="margin-left: 7px;"></div>
+    <div id="come_for_a_soak">
+            <p class="header">Come for a soak!</p></div>
+    <div id="cfas_paragraph">
+            <p class="paragraph"> Takhini Hot Pools is one of the most visited locations in the Yukon. 
     The hot springs have been in operation for over 100 years. Our hot springs 
     pools are a relaxing 36° and 42° Celsius, with water entering the pool at 47 
-    degrees. The water is natural and rich in minerals . We are open year around. Please see the menu above for our summer and winter hours. See our "Hours and Rates" section for nightly deals and specials.</p>
-    <div id="campground_and_hostel"><p style="font-size:50px">Campground and Hostel</p></div>
-    <p style="font-size:30px">The hostel is located only a 30 second walk away from the hot springs. It is brand new and has only been in operation for 1 year. Our forested campground, behind the hostel, provides excellent northern lights viewing. The edge-of-the-wilderness location provides access to trails for walking, biking, snow-shoeing and cross-country skiing. All guests from the hostel and campground receive a 20% discount at the hot springs.</p>
+    degrees. The water is natural and rich in minerals . We are open year around. Please see the menu above for our summer and winter hours. See our "Hours and Rates" section for nightly deals and specials.</p></div>
+            <p style="clear:both"></p>
+    <div id="ch_image"><img src="http://takhinihotpools.com/static/img/Takhini-Hot-Springs-0098.png" width="500px" style="float:left; margin-right: 7px; margin-bottom: 5px;"></div>
+    <div id="cht_and_p">
+        <div id="campground_and_hostel">
+            <p class="header">Campground and Hostel</p></div>
+    <div id="ch_p">
+            <p class="paragraph">The hostel is located only a 30 second walk away from the hot springs. It is brand new and has only been in operation for 1 year. Our forested campground, behind the hostel, provides excellent northern lights viewing. The edge-of-the-wilderness location provides access to trails for walking, biking, snow-shoeing and cross-country skiing. All guests from the hostel and campground receive a 20% discount at the hot springs.</p></div></div>
 </body>
 </html>
