--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <meta charset="utf-8">
@@ -43,10 +42,10 @@
             background-color: white;
         }
         #come_for_a_soak {
-            padding-top: 20px; background-color: #0284ff; float: right; margin-top: 5px
+            padding-top: 20px; background-color: #0284ff; float: left; margin-top: 5px
         }
         #campground_and_hostel {
-            padding-top: 20px; float: left; margin-right: 5px; background-color: #0284ff
+            padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff
         }
         #news {
             padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff
@@ -72,7 +71,7 @@
         #ns_p {
             background-color: #00daf7; border: solid white 10px;
         }
-    </style>
+</style>
 <body>
 <!--- navagation_bar --->
         <div id="nav_bar">
@@ -95,7 +94,7 @@
     <div id="ns_p">
             <p class="paragraph"> Come check out the new business on the property, 
     Yukon Escape Games. If you are looking for a fun activity on the property 
-    then come check them out!</div>
+    then come check them out!<br><br></div>
     </p> 
     <div id="cfas_image">
         <img src="http://en.destinationcanada.com/sites/default/files/imagecache/fullstory_image_465w/image/story_ideas/10_spas_takhini.jpg" width="450px" style="margin-left: 7px;"></div>
@@ -105,13 +104,13 @@
             <p class="paragraph"> Takhini Hot Pools is one of the most visited locations in the Yukon. 
     The hot springs have been in operation for over 100 years. Our hot springs 
     pools are a relaxing 36° and 42° Celsius, with water entering the pool at 47 
-    degrees. The water is natural and rich in minerals . We are open year around. Please see the menu above for our summer and winter hours. See our "Hours and Rates" section for nightly deals and specials.</p></div>
+    degrees. The water is natural and rich in minerals . We are open year around. Please see the menu above for our summer and winter hours. See our "Hours and Rates" section for nightly deals and specials.<br><br></p></div>
             <p style="clear:both"></p>
     <div id="ch_image"><img src="http://takhinihotpools.com/static/img/Takhini-Hot-Springs-0098.png" width="500px" style="float:left; margin-right: 7px; margin-bottom: 5px;"></div>
     <div id="cht_and_p">
         <div id="campground_and_hostel">
             <p class="header">Campground and Hostel</p></div>
     <div id="ch_p">
-            <p class="paragraph">The hostel is located only a 30 second walk away from the hot springs. It is brand new and has only been in operation for 1 year. Our forested campground, behind the hostel, provides excellent northern lights viewing. The edge-of-the-wilderness location provides access to trails for walking, biking, snow-shoeing and cross-country skiing. All guests from the hostel and campground receive a 20% discount at the hot springs.</p></div></div>
+            <p class="paragraph">The hostel is located only a 30 second walk away from the hot springs. It is brand new and has only been in operation for 1 year. Our forested campground, behind the hostel, provides excellent northern lights viewing. The edge-of-the-wilderness location provides access to trails for walking, biking, snow-shoeing and cross-country skiing. All guests from the hostel and campground receive a 20% discount at the hot springs<br><br><br></p></div></div>
 </body>
 </html>
