--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div id="news">
             <p class="header">News<p></div>
     <div id="ns_p">
-            <p class="paragraph"> Come check out the new business on the property, 
+            <p class="paragraph"><br><br>Come check out the new business on the property, 
     Yukon Escape Games. If you are looking for a fun activity on the property 
     then come check them out!<br><br></div>
     </p> 
@@ -101,7 +101,7 @@
     <div id="come_for_a_soak">
             <p class="header">Come for a soak!</p></div>
     <div id="cfas_paragraph">
-            <p class="paragraph"> Takhini Hot Pools is one of the most visited locations in the Yukon. 
+            <p class="paragraph"><br><br>Takhini Hot Pools is one of the most visited locations in the Yukon. 
     The hot springs have been in operation for over 100 years. Our hot springs 
     pools are a relaxing 36° and 42° Celsius, with water entering the pool at 47 
     degrees. The water is natural and rich in minerals . We are open year around. Please see the menu above for our summer and winter hours. See our "Hours and Rates" section for nightly deals and specials.<br><br></p></div>
@@ -111,6 +111,6 @@
         <div id="campground_and_hostel">
             <p class="header">Campground and Hostel</p></div>
     <div id="ch_p">
-            <p class="paragraph">The hostel is located only a 30 second walk away from the hot springs. It is brand new and has only been in operation for 1 year. Our forested campground, behind the hostel, provides excellent northern lights viewing. The edge-of-the-wilderness location provides access to trails for walking, biking, snow-shoeing and cross-country skiing. All guests from the hostel and campground receive a 20% discount at the hot springs<br><br><br></p></div></div>
+            <p class="paragraph"><br><br>The hostel is located only a 30 second walk away from the hot springs. It is brand new and has only been in operation for 1 year. Our forested campground, behind the hostel, provides excellent northern lights viewing. The edge-of-the-wilderness location provides access to trails for walking, biking, snow-shoeing and cross-country skiing. All guests from the hostel and campground receive a 20% discount at the hot springs<br><br></p></div></div>
 </body>
 </html>
