--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             background-color: white;
         }
         #come_for_a_soak {
-            padding-top: 20px; background-color: #0284ff; float: left; margin-top: 5px; border: solid black 2px
+            padding-top: 20px; background-color: #0284ff; float: left; margin-top: 5px; border: solid black 1px; border-bottom-style: none;
         }
         #campground_and_hostel {
-            padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff; border: solid black 2px
+            padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff; border: solid black 1px; border-bottom-style: none;
         }
         #news {
-            padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff; border: solid black 2px
+            padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff; border: solid black 1px; border-bottom-style: none;
         }
         #ch_image {
             float: left; margin-left: 50px;
