--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff; border: solid black 1px; border-top-style: none;
         }
         #news {
-            padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff; border-bottom: 3px;
+            padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff; border-bottom: solid black 3px;
         }
         #ch_image {
             float: left; margin-left: 50px;
