--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             background-color: white;
         }
         #come_for_a_soak {
-            padding-top: 20px; background-color: #0284ff; float: left; margin-top: 5px; border: solid black 1px; border-top-style: none;
+            padding-top: 20px; background-color: #0284ff; float: right; margin-top: 5px; border-bottom: solid black 3px;
         }
         #campground_and_hostel {
-            padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff; border: solid black 1px; border-top-style: none;
+            padding-top: 20px; float: left; margin-left: 5px; background-color: #0284ff; border-bottom: solid black 3px;
         }
         #news {
             padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff; border-bottom: solid black 3px;
