--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             padding-top: 20px; background-color: #0284ff; float: right; margin-top: 5px; border-bottom: solid black 3px;
         }
         #campground_and_hostel {
-            padding-top: 20px; float: left; margin-left: 5px; background-color: #0284ff; border-bottom: solid black 3px;
+            padding-top: 20px; float: left; margin-right: 5px; background-color: #0284ff; border-bottom: solid black 3px;
         }
         #news {
             padding-top: 20px; float: right; margin-right: 5px; background-color: #0284ff; border-bottom: solid black 3px;
@@ -72,6 +72,7 @@
             background-color: #00daf7; border: solid white 10px;
         }
 </style>
+    <title>Takhini Hot Springs</title>
 <body>
 <!--- navagation_bar --->
         <div id="nav_bar">
