--- a/index.html
+++ b/index.html
@@ -32,42 +32,37 @@
         }
 /* navagation_bar */
         li {font-family: sans-serif; background-color: white}
-        #section_1 {
-            background-color: white
-        }
         h2 {
             padding-top: 10px; 
             padding-left: 100px;
         }
-        body {
-            background-color: white;
-        }
         #come_for_a_soak {
             padding-top: 20px; 
-            background-color: #0284ff; 
-            float: right; 
-            margin-top: 0px; 
-            border-bottom: solid black 3px; 
-            margin-left: 1px
+            background-color: transparent; 
+            float: left; 
+            margin-top: 0px;
+            margin-left: 30px;
+            width: 100%;
+            text-align: left;
+            position: absolute;
+            color: black;
         }
         #campground_and_hostel {
             position: absolute;
-            color: white;
+            color: black;
             margin-top: -600px;
         }
         #news {
-            padding-top: 20px; 
+
             float: right; 
             margin-right: 5px; 
             background-color: #0284ff; 
             border-bottom: solid black 3px;
         }
-        #cfas_image {
-            float: right; 
-            position: relative; 
-            top: 10px; 
-            right: 10px; 
-            display: block; 
+        #cfas_img {
+            float: left;
+            top: 1200px;
+            width: 40%;
         }
         .header {
             font-size: 60px; 
@@ -79,24 +74,25 @@
             background-color: white; 
         }
         #cfas_paragraph {
-            background-color: white; 
-            margin-left: 7px; 
+            background-color: #00daf7; 
+            float: right;
+            border-top: solid black 1px;
         }
         #ns_p {
-            background-color: white; 
-            margin-left: 7px;
+            background-color: #00daf7; 
+            margin-left: 0px;
+            width: 100%
         }
         #img_ch {
             width: 100%;
             height: 625px;
-            background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('http://takhinihotpools.com/static/img/Takhini-Hot-Springs-0098.png'), no-repeat;
-            overflow: hidden
+            overflow: hidden;
+            background:  linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) );
         }
         #ch_p {
             position: relative;
-            color: white;
+            color: black;
             margin-top: -510px;
-            margin-right: -50px;
         }
 </style>
     <title>Takhini Hot Springs</title>
@@ -115,30 +111,24 @@
             </ul>
         </nav></div>
 <!--- navagation_bar --->
-       <img src="http://takhinihotpools.com/static/img/winter-banner.jpg" width="1348">
-    <div id="section_1">
+       <img src="http://takhinihotpools.com/static/img/winter-banner.jpg" width="100%">
     <div id="news">
             <p class="header">News<p></div>
     <div id="ns_p">
             <p class="paragraph"><br>Come check out the new business on the property, 
     Yukon Escape Games. If you are looking for a fun activity on the property 
     then come check them out!<br><br></div>
-    </p> 
-    <div id="cfas_image">
-        <img src="http://en.destinationcanada.com/sites/default/files/imagecache/fullstory_image_465w/image/story_ideas/10_spas_takhini.jpg" width="572px" style="margin-left: 7px;"></div>
-    <div id="cfas_and_p">
+    </p>
     <div id="come_for_a_soak">
             <p class="header">Come for a soak!</p></div>
-    <div id="cfas_paragraph">
-            <p class="paragraph"><br>Takhini Hot Pools is one of the most visited locations in the Yukon. 
+            <p class="paragraph" id="cfas_paragraph"><img id="cfas_img" src="http://en.destinationcanada.com/sites/default/files/imagecache/fullstory_image_465w/image/story_ideas/10_spas_takhini.jpg" width="50%" style="float: left; margin: 0px 20px;"><br><br>Takhini Hot Pools is one of the most visited locations in the Yukon. 
 The hot springs have been in operation for over 100 years. Our hot springs 
 pools are a relaxing 36° and 42° Celsius, with water entering the pool at 47 
-degrees. The water is natural and rich in minerals . We are open year around. Please see the menu above for our summer and winter hours. See our "Hours and Rates" section for nightly deals and specials.<br><br><br><br></p></div></div>
-            <p style="clear:both"></p>
+degrees. The water is natural and rich in minerals . We are open year around. Please see the menu above for our summer and winter hours. See our "Hours and Rates" section for nightly deals and specials.<br><br></p>
     <div id="cht_and_p">
-        <div id="img_ch"></div>
+            <img id="img_ch" src="http://takhinihotpools.com/static/img/Takhini-Hot-Springs-0098.png">
         <div id="campground_and_hostel">
-            <article><p class="header">Campground and Hostel</p></article></div>
+            <p class="header">Campground and Hostel</p></div>
     <div id="ch_p">
             <p class="paragraph">The hostel is located only a 30 second walk away from the hot springs. It is brand new and has only been in operation for 1 year. Our forested campground, behind the hostel, provides excellent northern lights viewing. The edge-of-the-wilderness location provides access to trails for walking, biking, snow-shoeing and cross-country skiing. All guests from the hostel and campground receive a 20% discount at the hot springs</p></div></div>
 </body>
