--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             background-color: white; 
         }
         #cfas_paragraph {
-            background-color: #00daf7; 
+            background-color: #235784; 
             float: right;
             border-top: solid black 1px;
         }
