--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             background-color: #235784; 
             float: right;
             border-top: solid black 1px;
+            color: white;
         }
         #ns_p {
             background-color: #00daf7; 
