--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <meta charset="utf-8">
     <style>    
-/*#ffffe6, #00daf7, #0284ff*/
+/*#44217a, #3da077, #235784, #0d72a5, white, and #0d12a5*/
 /*style="float:left; margin-right: 7px; margin-bottom: 5px; border: solid black 3px;"*/
 /* navagation_bar */
         * {margin:0; padding:0;
