--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             width: 100%;
             height: 625px;
             overflow: hidden;
-            background:  linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) );
+            filter: brightness (50%);
         }
         #ch_p {
             position: relative;
