--- a/index.html
+++ b/index.html
@@ -228,7 +228,38 @@
 
         <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script><br><br></div>
     <h2>Gallery</h2>
-        <p>*pictures*</p>
+        <table>
+            <tr>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+            </tr>
+                        <tr>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+            </tr>
+                        <tr>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+            </tr>
+                        <tr>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+            </tr>
+            <tr>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+            </tr>
+            <tr>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+            </tr>
+        </table>
     <!----- Framework ----->
 </body>
 </html>
