--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
     <h2>Gallery</h2>
         <table>
             <tr>
-                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
-                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
-                <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
+                <th><img src="http://takhinihotpools.com/media/img/IMG_9275.JPG" width="33%"></th>
+                <th><img src="http://takhinihotpools.com/media/img/IMG_9728.JPG" width="33%"></th>
+                <th><img src="http://takhinihotpools.com/media/img/ZL2Q7890.jpg" width="33%"></th>
             </tr>
                         <tr>
                 <th><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Happy_smiley_face.png" width="33%"></th>
