--- a/index.html
+++ b/index.html
@@ -42,10 +42,6 @@
             width: 100%;
             top: 80px
         }
-        .header {
-            font-size: 2.4em;
-            font-weight: 100;
-        }
         #balzam_cafe {
             width: 45%;
             max-height: 200px;
@@ -192,8 +188,8 @@
         <div id="cfas_paragraph"><p>Takhini Hot Pools is one of the most visited locations in the Yukon. The hot springs have been in operation for over 100 years. Our hot springs pools are a relaxing 36° and 42° Celsius, with water entering the pool at 47 degrees. The water is natural and rich in minerals . We are open year around. Please see the menu above for our summer and winter hours. See our "Hours and Rates" section for nightly deals and specials.</p></div><br><br></div>
         <p class="clear"></p>
         <div id="img_campground_and_hostel">
-        <p id="h_campgrounds_and_hostel" class="header">Campgrounds and Hostel</p>
-        <br><br><br><p style="color: white;">The hostel is located only a 30 second walk away from the hot springs. It is brand new and has only been in operation for 1 year. Our forested campground, behind the hostel, provides excellent northern lights viewing. The edge-of-the-wilderness location provides access to trails for walking, biking, snow-shoeing and cross-country skiing. All guests from the hostel and campground receive a 20% discount at the hot springs</p><br><br><br></div>
+        <h2 id="h_campgrounds_and_hostel">Campgrounds and Hostel</h2>
+        <br><br><br><p style="color: white;">The hostel is located only a 30 second walk away from the hot springs. It is brand new and has only been in operation for 1 year. Our forested campground, behind the hostel, provides excellent northern lights viewing. The edge-of-the-wilderness location provides access to trails for walking, biking, snow-shoeing and cross-country skiing. All guests from the hostel and campground receive a <b>20% discount</b>only at the <u><b>hot springs</b></u></p><br><br><br></div>
     <div id="local_businesses"><br><h2 id="local_businesses"><center>Local Businesses</center></h2><br></div>
         <ul class="img-list">
             <li>
