--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
             color: white;
             font-size: 5em
         }
+        #og_website {
+            width: 100%;
+            min-height: 800px;
+        }
+        
     </style>    
 <body>
     <!----- Framework ----->
@@ -275,6 +280,7 @@
                 <th><img src="http://takhinihotpools.com/media/img/10945814_314972205362986_2535773757389503556_o.jpg" width="70%"></th>
             </tr>
         </table>
+        <iframe id="og_website" src="http://takhinihotpools.com/">Original Takhini Website</iframe>
     <!----- Framework ----->
 </body>
 </html>
