--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <th><img src="http://takhinihotpools.com/media/img/10945814_314972205362986_2535773757389503556_o.jpg" width="70%"></th>
             </tr>
         </table>
-        <iframe id="og_website" src="http://takhinihotpools.com/">Original Takhini Website</iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1941.6691646376767!2d-135.36046068434712!3d60.87897159285619!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x51546f2b050d8607%3A0xd71f4bff3c8fb1a5!2sTakhini+Hot+Springs!5e0!3m2!1sen!2sca!4v1478628110261" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     <!----- Framework ----->
 </body>
 </html>
