--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       body {
           font-size: 14;
           background-color: #328CC1;
+	  font-family: sans-serif;
       }
       #reporter {
           color: white;
