--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       }
 /* Navigation Bar */
       body {
-          font-size: 14;
+          font-size: 14px;
           background-color: #328CC1;
 	  font-family: sans-serif;
       }
