--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       The Intergalactic government of Solar System One has officially declared that "Earth Prime", the original earth, is a dead and uninhabited planet. With the enormous amounts of greenhouse gases emissions that corrupt the atmosphere of "Earth Prime", it is extremely unhealthy to be living on the planet. There are still signs of living organisms on the deserted planet, but, "without proper equipment and clothing, there'll be major health risks if any human decides to live on "Earth Prime" in its current status" concluded SS1 Health and Benefits.
     </p>
       <br>
-    <img id="ad_1" src="http://favim.com/orig/201104/30/Favim.com-29346.jpg" alt="buylarge advertisement WALLE">
+    <img id="ad_1" src="http://favim.com/orig/201104/30/Favim.com-29346.jpg" alt="buylarge advertisement WALLE"> <!--- New AD link: http://cartype.com/pics/6524/full/lotus_60-years_ad.jpg --->
       <p class="news_paragraph_main"> Expert analyses along with some of the greatest minds of the century have gathered at Mar's Environmental Gathering. They have concluded that with time and a couple small developments in technology with the understanding of biology, "Earth Prime" can and will be restored to the original thriving "blue world" that it once was.
       </p>
       <br>
