--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>SS1 Technology Inc.</title>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
   <style>
       *{
             margin: 0;
