--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>SS1 Technology Inc.</title>
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"> <!--- http://swedishstartupspace.com/static/assets/images/favicon/favicon-web-v3.ico --->
   <style>
       *{
             margin: 0;
