--- a/index.html
+++ b/index.html
@@ -73,8 +73,13 @@
       }
 /* Advertisement */
        #helena {
-          font: 1em;
+          font-size: 1em;
           color: white;
+      }
+       footer {
+          color: white;
+          font-size: 0.8em;
+          text-align: center;
       }
   </style>
   </head>
@@ -137,6 +142,7 @@
       <p class="news_paragraph_main">"Till further notice. '<i>'Earth Prime'</i> will be quarantined and any person that are below the <em>class of Demeter, Hermes, Hephaestus, or Titan classes</em> are <strong>forbinned</strong> to enter <i>'Earth Prime's'</i> toxic atomsphere. Anyone that dares attempt to enter will be imprisoned for the act of trespassing, treason, or evasion of the law. We'll (Intergalactic Government of Solar System One) will update Solar System One of any developments."</p>
       <p id="helena"><i>- Representative, Helena Georgina Anupama Rye, of The Intergalactic Government of Solar System One</i></p>
 <!--- News Story --->
+      <footer>©All rights reserved to SS1 Technology Inc.</footer>
   </body>
 </html>
 
