--- a/index.html
+++ b/index.html
@@ -57,11 +57,9 @@
       }
       #news_heading {
           font-size: 4em;
-          color: white;
       }
       .news_paragraph_main {
           font-size: 1.5em;
-          color: white;
           margin: 7px;
           text-indent: 2em;
       }
@@ -74,12 +72,13 @@
 /* Advertisement */
        #helena {
           font-size: 1em;
-          color: white;
       }
        footer {
-          color: white;
           font-size: 1em;
           text-align: center;
+      }
+       main {
+          color: white;
       }
   </style>
   </head>
@@ -105,6 +104,7 @@
       <br>
       <br>
 <!--- News Heading --->
+    <main>
 	<h2 id="news_heading"><center>
    	  Government has declared "Earth is a dead planet"
     </center></h2>
@@ -143,6 +143,6 @@
       <p id="helena"><i>- Representative, Helena Georgina Anupama Rye, of The Intergalactic Government of Solar System One</i></p>
 <!--- News Story --->
       <footer>©All rights reserved to SS1 Technology Inc.</footer>
+      </main>
   </body>
 </html>
-
