--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 /* Advertisement */
        #helena {
           font-size: 0.6em;
+	  text-align: center;
       }
        footer {
           font-size: 1em;
