--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
           font-size: 1em;
           text-align: center;
       }
+       main {
+          color: white;
+      }
   </style>
   </head>
   <body>
@@ -102,6 +105,7 @@
       <br>
       <br>
 <!--- News Heading --->
+	<main>
 	<h2 id="news_heading"><center>
    	  Government has declared "Earth is a dead planet"
     </center></h2>
@@ -139,6 +143,7 @@
       <p class="news_paragraph_main">"Till further notice. '<i>'Earth Prime'</i> will be quarantined and any person that are below the <em>class of Demeter, Hermes, Hephaestus, or Titan classes</em> are <strong>forbinned</strong> to enter <i>'Earth Prime's'</i> toxic atomsphere. Anyone that's caught entering will be imprisoned for the act of trespassing, treason, or evasion of the law. Any citizens of 'Earth Prime' with ranks above 'Artemis', will be allocated to the moons of Jupiter, Mars, or Pluto. Anyone below the 'Hermes' rank will be allowed to inhabit one refugee stations obiting Saturn, but will have the option to stay with relatives that aren't lving in the Zues or Posident class celestial bodies (Europia, Venus, and 'Earth-02' in SOlar System 4). Updates about any Solar System One developments will be announced by 'Earth Prime's SS1 Government'"<br><span id="helena"><i>-Representative, Helena Georgina Anupama Rye, of The Intergalactic Government of Solar System One</i></span></p>
 <!--- News Story --->
       <footer>©All rights reserved to SS1 Technology Inc.</footer>
+      </main>
   </body>
 </html>
 
